// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalMessage renders a message as expected with an image 1`] = `
<MessageWrapper
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "elevation": 3,
          "margin": 16,
          "minHeight": "40%",
          "padding": 16,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        Object {},
        Object {},
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginLeft": "auto",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "marginLeft": 20,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "asset.png",
            }
          }
          style={
            Array [
              Object {
                "height": 100,
                "width": 100,
              },
              undefined,
            ]
          }
          testID="aws-amplify__in-app-messaging--image"
        />
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
          ]
        }
        testID="aws-amplify__in-app-messaging--close-button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
            }
          }
          style={
            Object {
              "height": 20,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 20,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "marginHorizontal": 4,
          "marginVertical": 12,
        }
      }
    />
  </View>
</MessageWrapper>
`;

exports[`ModalMessage renders a message as expected without an image 1`] = `
<MessageWrapper
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "elevation": 3,
          "margin": 16,
          "minHeight": "40%",
          "padding": 16,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        Object {},
        Object {},
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginLeft": "auto",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
          ]
        }
        testID="aws-amplify__in-app-messaging--close-button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
            }
          }
          style={
            Object {
              "height": 20,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 20,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "marginHorizontal": 4,
          "marginVertical": 12,
        }
      }
    />
  </View>
</MessageWrapper>
`;
